Pass unit to transport mapping information.